primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Scene_Asset__c/Scene_Asset__c.object-meta.xml
<CustomObject>
    <label>Scene Asset</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Scene Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scene Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>