primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Scene_Asset__c/fields/Base_Scene__c.field-meta.xml
<CustomField>
    <fullName>Base_Scene__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Scene</label>
    <referenceTo>Scene_Asset__c</referenceTo>
    <relationshipLabel>Edited Scenes</relationshipLabel>
    <relationshipName>Edited_Scenes</relationshipName>
    <type>Lookup</type>
</CustomField>