primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Scene_Asset__c/fields/Customer_Context__c.field-meta.xml
<CustomField>
    <fullName>Customer_Context__c</fullName>
    <label>Customer Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>