primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Scene_Asset__c/fields/Generation_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Generation_Prompt__c</fullName>
    <label>Generation Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>