primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Scene_Asset__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>