primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Scene_Asset__c/fields/Last_Used__c.field-meta.xml
<CustomField>
    <fullName>Last_Used__c</fullName>
    <label>Last Used</label>
    <type>DateTime</type>
</CustomField>