primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Scene_Asset__c/fields/Mood__c.field-meta.xml
<CustomField>
    <fullName>Mood__c</fullName>
    <label>Mood</label>
    <length>255</length>
    <type>Text</type>
</CustomField>