primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Scene_Asset__c/fields/Products_Used__c.field-meta.xml
<CustomField>
    <fullName>Products_Used__c</fullName>
    <label>Products Used</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>