primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Scene_Asset__c/fields/Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Quality_Score__c</fullName>
    <defaultValue>3.0</defaultValue>
    <label>Quality Score</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>