primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Scene_Asset__c/fields/Scene_Type__c.field-meta.xml
<CustomField>
    <fullName>Scene_Type__c</fullName>
    <label>Scene Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>product</fullName>
            </value>
            <value>
                <fullName>welcome</fullName>
            </value>
            <value>
                <fullName>transition</fullName>
            </value>
            <value>
                <fullName>ambient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>