primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Scene_Asset__c/fields/Setting__c.field-meta.xml
<CustomField>
    <fullName>Setting__c</fullName>
    <label>Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>neutral</fullName>
            </value>
            <value>
                <fullName>bathroom</fullName>
            </value>
            <value>
                <fullName>travel</fullName>
            </value>
            <value>
                <fullName>outdoor</fullName>
            </value>
            <value>
                <fullName>lifestyle</fullName>
            </value>
            <value>
                <fullName>bedroom</fullName>
            </value>
            <value>
                <fullName>vanity</fullName>
            </value>
            <value>
                <fullName>gym</fullName>
            </value>
            <value>
                <fullName>office</fullName>
            </value>
            <value>
                <fullName>welcome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>