primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Scene_Asset__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>generated</fullName>
            </value>
            <value>
                <fullName>pre-seeded</fullName>
            </value>
            <value>
                <fullName>uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>