primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Scene_Asset__c/fields/Usage_Count__c.field-meta.xml
<CustomField>
    <fullName>Usage_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Usage Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>